# slacker

./: Cargo.toml  README.md
src/: lib.rs
src/client/: mod.rs  slacker.rs
src/methods/: dialog_open.rs  get_user_info.rs  mod.rs  post_message.rs  update_message.rs  view_open.rs  view_push.rs  view_update.rs
src/request_data/: block_elements.rs  channel.rs  composite_object.rs  conversation.rs  dialog.rs  layout_blocks.rs  message.rs  message_payloads.rs  mod.rs  secondary_attachments.rs  view.rs
src/response_data/: action_response.rs  errors.rs  mod.rs  post_message_response.rs  user_info.rs
