[package]
name = "slacker"
version = "0.1.0"
authors = ["vaiklol <samokatanet@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version="1.*", features=["derive"] }
serde_json = "1.*"
tokio = "0.1.*"
futures = "0.1.*"
reqwest = "0.9.20"
rand = "0.7.2"